@@ -4,6 +4,10 @@
 
   02 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
   afni-9999.ebuild:
+  using ED instead of D (prefix support)
+
+  02 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
+  afni-9999.ebuild:
   installing afni binaries under /usr/bin
 
   31 Mar 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
